Fix UI safe area overlap for mobile browsers

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     width: 100%;
     pointer-events: none;
     padding: 20px;
+    padding-top: calc(20px + env(safe-area-inset-top));
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
